force-app/main/default/objects/Financial_Entity__c/Financial_Entity__c.object-meta.xml
<CustomObject>
    <label>Financial Entity</label>
    <nameField>
        <label>Financial Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>