force-app/main/default/objects/Financial_Entity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Entities</relationshipLabel>
    <relationshipName>Financial_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>