force-app/main/default/objects/Financial_Entity__c/fields/Amount_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Disbursed__c</fullName>
    <label>Amount Disbursed</label>
    <summarizedField>Paybale__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Paybale__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Paybale__c.Finacial_Entity_Details__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>