force-app/main/default/objects/Financial_Entity__c/fields/Amount_To_Be_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Disbursed__c</fullName>
    <label>Amount To Be Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>