force-app/main/default/objects/Financial_Entity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Entities</relationshipLabel>
    <relationshipName>Financial_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>