force-app/main/default/objects/Financial_Entity__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Financial Institute (BT)</fullName>
            </value>
            <value>
                <fullName>Financial Institute (Debt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>